examples/nextjs-commerce/packages/spree/dist/errors/MissingProductError.js
class MissingProductError extends Error {
}
export { MissingProductError as default };
